fix(app.comp) collapse animation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,12 +16,6 @@
     background-color: $success;
   }
 }
-#wrapper-actions,
-#language-creator,
-#content {
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
 #wrapper-actions {
   padding: 0 8px;
 }
