--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,6 +84,10 @@ pre {
 .padding {
   padding: 8px;
 }
+.half-padding-v {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
 .mono {
   font-family: 'Roboto Mono', monospace;
 }
